--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,16 @@
 title: Sarah Kontos # your name (or website title) here
 logo: "images/IMG_9297.jpeg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Maps, Data, Urbanism 
   <br></br>
-  I’m a cartographic designer and data analyst with an interest in ivestigating the ways that people move through cities.
-  With a background in Urban Studies and visual design, I've created a path as a data anlyst in the GIS and transportation space.
-  In my work I am to balance clarity and information to create tools that are useful and revealing.
+  I am a cartographic designer with a background in Urban Design and transportation systems technology.
+  My work aims to leverage civic tech to connect communities and investigate systems embedded in the built environment.
+  <br></br>
   <br></br>
   <a href="https://www.linkedin.com/in/smkontos/">View My LinkedIn Profile</a> 
+  <br></br>
+  Brooklyn, NY
+  <br></br>
+  2026
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
